tests/snippets/parse_int_match/lower.snapshot
# Lower

## snippet
  fn snippet$main() -> i32
    block :void
      let __scrut_0: i32 | ParseError =
        call :i32 | ParseError
          callee:
            parse_int :fn(string) -> i32 | ParseError
          arg0:
            "42" :string
      ~>
        if :void
          cond:
            is i32 :bool
              __scrut_0 :i32 | ParseError
          then:
            ~>
              call :void
                callee:
                  std_io$std_io$println__string :void
                arg0:
                  "int ok" :string
          else:
            ~>
              if :void
                cond:
                  is ParseError :bool
                    __scrut_0 :i32 | ParseError
                then:
                  ~>
                    call :void
                      callee:
                        std_io$std_io$println__string :void
                      arg0:
                        "int err" :string
                else:
                  ~>
                    unreachable("non-exhaustive match (T3013 should have caught this)") :void
    block :void
      let __scrut_1: i32 | ParseError =
        call :i32 | ParseError
          callee:
            parse_int :fn(string) -> i32 | ParseError
          arg0:
            "nope" :string
      ~>
        if :void
          cond:
            is i32 :bool
              __scrut_1 :i32 | ParseError
          then:
            ~>
              call :void
                callee:
                  std_io$std_io$println__string :void
                arg0:
                  "int ok" :string
          else:
            ~>
              if :void
                cond:
                  is ParseError :bool
                    __scrut_1 :i32 | ParseError
                then:
                  ~>
                    call :void
                      callee:
                        std_io$std_io$println__string :void
                      arg0:
                        "int err" :string
                else:
                  ~>
                    unreachable("non-exhaustive match (T3013 should have caught this)") :void
    block :void
      let __scrut_2: Error | f64 =
        call :Error | f64
          callee:
            parse_float :fn(string) -> Error | f64
          arg0:
            "3.14" :string
      ~>
        if :void
          cond:
            is f64 :bool
              __scrut_2 :Error | f64
          then:
            ~>
              call :void
                callee:
                  std_io$std_io$println__string :void
                arg0:
                  "float ok" :string
          else:
            ~>
              if :void
                cond:
                  is Error :bool
                    __scrut_2 :Error | f64
                then:
                  ~>
                    call :void
                      callee:
                        std_io$std_io$println__string :void
                      arg0:
                        "float err" :string
                else:
                  ~>
                    unreachable("non-exhaustive match (T3013 should have caught this)") :void
    block :void
      let __scrut_3: Error | f64 =
        call :Error | f64
          callee:
            parse_float :fn(string) -> Error | f64
          arg0:
            "nope" :string
      ~>
        if :void
          cond:
            is f64 :bool
              __scrut_3 :Error | f64
          then:
            ~>
              call :void
                callee:
                  std_io$std_io$println__string :void
                arg0:
                  "float ok" :string
          else:
            ~>
              if :void
                cond:
                  is Error :bool
                    __scrut_3 :Error | f64
                then:
                  ~>
                    call :void
                      callee:
                        std_io$std_io$println__string :void
                      arg0:
                        "float err" :string
                else:
                  ~>
                    unreachable("non-exhaustive match (T3013 should have caught this)") :void
    return int(0) :i32
